# tensory

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  Dockerfile.api  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  eval_extraction.py  pyproject.toml  tensory_hook.py  tensory_mcp.py
.claude-plugin/: marketplace.json
.claude/rules/: api.md  ui.md
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml
api/: __init__.py  dependencies.py  main.py  server.py
api/routers/: __init__.py  claims.py  graph.py  stats.py  timeline.py
benchmarks/: README.md  __init__.py
benchmarks/locomo/: README.md  __init__.py  __main__.py  answer.py  data.py  debug_multihop.py  ingest.py  run.py  run_categories.py  score.py
docs/: UI-competitor-research.md  api-guide.md  architecture.md  benchmark-results.md  cognitive-mechanisms.md  configuration.md  context-lens.md  releasing.md
docs/superpowers/plans/: 2026-03-28-tensory-dashboard.md  2026-03-30-timeline-ui.md
docs/superpowers/specs/: 2026-03-28-tensory-dashboard-design.md  2026-03-30-timeline-ui-design.md  2026-03-31-claude-code-sdk-llm-provider-design.md  2026-04-02-pipeline-optimize-design.md
examples/: demo.py  llm_adapters.py  mcp_server_example.py  seed_crypto.py
plans/: tensory-plan.md
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: marketplace.json  plugin.json
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/scripts/: load-env.sh  session-start.sh  stop.sh
scripts/: audit_dedup.py  behavioral_test.py  merge_entity_duplicates.py  repair_salience.py  test_extraction_quality.py  test_mcp.py
tensory/: CLAUDE.md  __init__.py  chunking.py  collisions.py  consolidate.py  context.py  dashboard.py  dedup.py  embedder.py  extract.py  extraction_gate.py  graph.py  models.py  prompts.py  routing.py  schema.py  search.py  service.py  store.py  temporal.py
tests/: conftest.py  test_api.py  test_chunking.py  test_claude_code_llm.py  test_collisions.py  test_consolidate.py  test_context.py  test_dedup.py  test_extract.py  test_extraction_gate.py  test_extraction_quality.py  test_fisher.py  test_graph.py  test_hybrid_extract.py  test_locomo_score.py  test_mcp.py  test_neo4j.py  test_procedural.py  test_reflect.py  test_routing.py  test_search.py  test_search_quality.py  test_service.py  test_store.py  test_temporal.py  test_timeline_api.py
ui/: CLAUDE.md  next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/(dashboard)/: layout.tsx  page.tsx
ui/app/(dashboard)/claims/: page.tsx
ui/app/(dashboard)/graph/: page.tsx
ui/app/(dashboard)/timeline/: page.tsx
ui/components/dashboard/: AmbientPlayer.tsx  ClaimsFilters.tsx  ClaimsTable.tsx  CursorGlow.tsx  EdgeLegend.tsx  EntityBadges.tsx  EntityTimeline.tsx  GhostNode.tsx  GraphControls.tsx  GraphViewer.tsx  HudWindow.tsx  LiveFeed.tsx  PhysicsTuner.tsx  PulseNode.tsx  SalienceEdge.tsx  Sidebar.tsx  StatsBar.tsx  TimelinePage.tsx  TimelineSlider.tsx  ZoomControls.tsx
ui/hooks/: use-claims.ts  use-graph-layout.ts  use-graph.ts  use-stats.ts  use-timeline.ts
ui/lib/: api.ts  types.ts
