[project]
name = "tensory"
version = "0.1.0"
description = "Embedded claim-native memory for AI agents. Collision detection built-in."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "aiosqlite>=0.17",
    "sqlite-vec>=0.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
neo4j = ["neo4j>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pyright>=1.1",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
