[project]
name = "tensory"
version = "0.1.0"
description = "Embedded claim-native memory for AI agents. Collision detection built-in."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["ai", "agents", "memory", "claims", "knowledge-graph", "sqlite", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.17",
    "sqlite-vec>=0.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
neo4j = ["neo4j>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pyright>=1.1",
    "ruff>=0.1",
]

[project.urls]
Repository = "https://github.com/tensory/tensory"
Documentation = "https://github.com/tensory/tensory#readme"
Issues = "https://github.com/tensory/tensory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pyright>=1.1",
    "ruff>=0.1",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["tensory"]
