[project]
name = "tensory"
dynamic = ["version"]
description = "Embedded claim-native memory for AI agents. Collision detection built-in."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["ai", "agents", "memory", "claims", "knowledge-graph", "sqlite", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.17",
    "sqlite-vec>=0.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
neo4j = ["neo4j>=5.0"]
mcp = ["mcp[cli]>=1.0", "anthropic>=0.40"]
ui = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "httpx>=0.28"]
all = ["tensory[openai,mcp,ui]"]

[project.scripts]
tensory-mcp = "tensory_mcp:main"
tensory-server = "api.server:main"

[project.urls]
Repository = "https://github.com/tensory/tensory"
Documentation = "https://github.com/tensory/tensory#readme"
Issues = "https://github.com/tensory/tensory/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
# Version from git tags: v0.2.0 → 0.2.0
# Between tags: 0.2.0.dev3+gabcdef1

[tool.hatch.build.hooks.vcs]
version-file = "tensory/_version.py"
# Auto-generates tensory/_version.py at build time

[tool.hatch.build]
# Include gitignored build artifacts (pre-built UI static files)
artifacts = ["tensory/_ui_static/"]

[tool.hatch.build.targets.wheel]
packages = ["tensory", "api"]

[tool.hatch.build.targets.wheel.force-include]
"tensory_mcp.py" = "tensory_mcp.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "ui/",
    "data/",
    "docs/",
    "benchmarks/",
    "tests/",
    "scripts/",
    ".github/",
    ".claude/",
    ".venv/",
    "*.db",
    ".env",
    ".env.*",
    "!.env.example",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pyright>=1.1",
    "ruff>=0.1",
    "anthropic>=0.86.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "mcp[cli]>=1.0",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["tests/test_locomo_score.py", "benchmarks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["tensory", "api"]
